# meowith-cli

./: Cargo.toml  README.md
src/: main.rs
src/auth/: local.rs  mod.rs
src/cli/: args.rs  config.rs  connector.rs  mod.rs
src/commands/: all_directories.rs  auth.rs  bucket_info.rs  delete_directory.rs  delete_file.rs  directory.rs  download.rs  files.rs  mkdir.rs  mod.rs  rename_directory.rs  rename_file.rs  stat_resource.rs  upload.rs
src/format/: data.rs  table.rs
src/types/: app.rs
